# canada-major-transfers

./: Makefile  README.md  pyproject.toml
src/canada_major_transfers/: main.py
