[tool.poetry]
name = "canada-major-transfers"
version = "0.1.0"
description = ""
authors = ["André Lobo Teixeira <andreloboteixeira@gmail.com>"]
readme = "README.md"

packages = [
    { include = "canada_major_transfers", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
lxml = "^5.3.0"
plotly = "^6.0.0"
dash = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
